cmd/server: include accepted at timestamp in disclaimer json
Issue: https://github.com/moov-io/customers/issues/32
