# client/api/openapi.yaml
@@ -839,6 +839,12 @@ components:
           description: Text that user must accept
           example: Set of conditions
           type: string
+        acceptedAt:
+          description: Timestamp if disclaimer has been accepted, a timestamp before
+            the year 2000 indicates no acceptance.
+          example: 2016-08-29T09:12:33.001Z
+          format: date-time
+          type: string
       type: object
     Disclaimers:
       items:
